2001-02-20  Torbjorn Granlund  <tege@swox.com>

	* mpn/sparc64/lshift.asm: Rewrite.
	* mpn/sparc64/rshift.asm: Rewrite.

2001-02-19  Torbjorn Granlund  <tege@swox.com>

	* mpn/sparc64/add_n.asm: Rewrite using `majority' logic.
	* mpn/sparc64/sub_n.asm: Likewise.

	* tune/tuneup.c (all): Recognise DECC and MIPSpro compilers.

	* mpn/pa64/sqr_diagonal.asm: Use PROLOGUE/EPILOGUE.
	* mpn/pa642/sqr_diagonal.asm: Likewise.

	* configure.in (HAVE_ABI_$abi): Disable for now.

	* mpn/asm-defs.m4 (PROLOGUE): Use LABEL_SUFFIX.

	* acinclude.m4 (GMP_ASM_ATTR): New check, for hppa oddities.

2001-02-18  Torbjorn Granlund  <tege@swox.com>

	* mpn/hppa/hppa1_1/gmp-mparam.h: New file.
	* mpn/hppa/hppa2_0/gmp-mparam.h: New file.

	* mpn/pa64/sqr_diagonal.asm: New file.
	* mpn/pa64w/sqr_diagonal.asm: New file.
	* mpn/hppa/hppa1_1/sqr_diagonal.asm: New file.
	* mpn/hppa/hppa2_0/sqr_diagonal.asm: New file.

	* mpn/sparc32/v9/add_n.asm: Use `fitod' instead of `fxtod' for dummy
	FA-pipeline insns.
	* mpn/sparc32/v9/sub_n.asm: Likewise.

2001-02-18  Kevin Ryde  <kevin@swox.se>

	* gmp.texi (Known Build Problems): Notes on make, $* and K&R, misc
	tweaks elsewhere.
	(Low-level Functions): Use {} notation in mpn_sqrtrem.
	(Basecase Multiplication): Mention BASECASE_SQR_THRESHOLD.

	* mpfr/isnan.c (mpfr_number_p): Infinity is not a number.
	* mpfr/out_str.c: Pass strlen+1 for the block size to free.
	* mpfr/get_str.c: Correction for realloc to strlen+1.

	* acinclude.m4 (GMP_C_SIZES): Generate an error if mp_limb_t doesn't
	seem to work for some reason.

2001-02-16  Torbjorn Granlund  <tege@swox.com>

	* mpn/sparc32/v9/gmp-mparam.h: Retune.

	* mpn/sparc32/v9/add_n.asm: New file.
	* mpn/sparc32/v9/sub_n.asm: New file.

	* mpn/sparc32/v9/mul_1.asm: Tune function entry.
	* mpn/sparc32/v9/addmul_1.asm: Likewise.
	* mpn/sparc32/v9/submul_1.asm: Likewise.

	* mpn/sparc32/v9/sqr_diagonal.asm: New file.

2001-02-16  Kevin Ryde  <kevin@swox.se>
